--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon ./backend/server.mjs",
-    "start": "node ./backend/server.mjs"
+    "ai": "nodemon ./backend/serverAssistant.mjs"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
     "nodemon": "^3.1.10",
+    "openai": "^5.16.0",
     "sequelize": "^6.37.7"
   }
 }
